--- a/app/components/project/map/map.scss
+++ b/app/components/project/map/map.scss
@@ -54,8 +54,8 @@
     transition: transform .3s ease-in-out;
     cursor: pointer;
     img {
-      //width: 100%;
-      //height: 100%;
+      width: 100%;
+      height: 100%;
     }
   }
 
